--- a/CSS/Comprar.css
+++ b/CSS/Comprar.css
@@ -1,7 +1,7 @@
 body{
     background-color: #ffeeee;
 }
-#Dest{
+.btn-dest{
     background-color: #b85e63;
     color: rgb(128, 49, 49);
     font-size: 10px;
