--- a/CSS/DESTSOP.css
+++ b/CSS/DESTSOP.css
@@ -1,11 +1,47 @@
-body{
-    background-color: #ffeeee;
+body {
+  font-family: "Courier New", Courier, monospace;
+  background-color: #ffeeee;
+  margin: 0;
 }
-#Comprar{
-    background-color: #b85e63;
-    color: rgb(128, 49, 49);
-    font-size: 10px;
-    padding: 10px;
-    margin: 100px;
-    border-radius: 5px;
+.btn-comprar {
+  background-color: blue;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+}
+.btn-comprar:hover {
+  color: red;
+}
+
+header {
+  display: flex;
+  min-height: 70px;
+  background-color: rgb(190, 190, 253);
+  justify-content: space-between;
+  align-items: center;
+}
+.img-logo {
+  height: 50px;
+  margin-left: 10px;
+}
+a {
+  text-decoration: none;
+  color: blue;
+}
+nav {
+  margin-right: 10px;
+}
+nav a:hover {
+  color: red;
+}
+
+@media (max-wigth: 600px) {
+  header {
+    flex-direction: column;
+  }
+  nav {
+    padding: 10px 0px;
+  }
 }
