--- a/CSS/DESTSOP.css
+++ b/CSS/DESTSOP.css
@@ -3,29 +3,18 @@ body {
   background-color: #ffeeee;
   margin: 0;
 }
-.btn-comprar {
-  background-color: blue;
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 5px;
-}
-.btn-comprar:hover {
-  color: red;
-}
-
 header {
   display: flex;
+  flex-direction: column;
   min-height: 70px;
-  background-color: rgb(190, 190, 253);
+  background-image: linear-gradient(10deg, #000020, 85%, #0000ff);
   justify-content: space-between;
   align-items: center;
 }
 .img-logo {
-  width: 200px;
-  height: 70px;
-  margin-bottom: -5px;
+  width: 150px;
+  height: 60px;
+  margin: 5px;
 }
 a {
   text-decoration: none;
@@ -37,14 +26,26 @@ nav {
 nav a:hover {
   color: red;
 }
+.btn-comprar {
+  background-color: blue;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+}
+.btn-comprar:hover {
+  color: red;
+}
 footer {
   background-color: rgb(190, 190, 253);
   text-align: center;
   padding: 10px;
 }
-@media (max-wigth: 600px) {
+@media (min-width: 600px) {
   header {
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
   }
   nav {
     padding: 10px 0px;
