cambio de fuente dia 3

--- a/CSS/DESTSOP.css
+++ b/CSS/DESTSOP.css
@@ -1,6 +1,6 @@
 body {
-  font-family: "Courier New", Courier, monospace;
-  background-color: #ffeeee;
+  font-family: "Genos" , sans-serif;
+  background-color: rgb(255, 238, 238);
   margin: 0;
 }
 header {
