--- a/CSS/Comprar.css
+++ b/CSS/Comprar.css
@@ -1,9 +1,8 @@
 body {
-  font-family: "Courier New", Courier, monospace;
-  background-color: #ffeeee;
+  font-family: "Genos" , sans-serif;
+  background-color: rgb(255, 238, 238);
   margin: 0;
 }
-
 header {
   display: flex;
   flex-direction: column;
