--- a/CSS/Comprar.css
+++ b/CSS/Comprar.css
@@ -1,33 +1,41 @@
-body {
-  font-family: "Genos" , sans-serif;
-  background-color: rgb(255, 238, 238);
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Genos", sans-serif;
 }
+body {
+  background-color: rgb(255, 238, 238);
+}
+
 header {
   display: flex;
-  flex-direction: column;
-  min-height: 70px;
-  background-image: linear-gradient(10deg, #000020, 85%, #0000ff);
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  background-image: linear-gradient(10deg, #000020, 85%, #0000ff);
 }
+
 .img-logo {
-  width: 150px;
-  height: 60px;
-  margin: 5px;
+ max-width: 150px;
 }
-a {
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.nav-list li a {
   text-decoration: none;
+  color: rgb(0, 0, 255);
 }
-nav a {
-  color: blue;
+
+.abrir-menu,
+.cerrar-menu{
+  display: none;
 }
-nav {
-  margin-right: 10px;
-}
-nav a:hover {
-  color: red;
-}
+
 .btn-dest {
   background-color: #0004f8;
   color: rgb(0, 0, 0);
@@ -44,12 +52,39 @@ footer {
   text-align: center;
   padding: 10px;
 }
-@media (min-width: 600px) {
-  header {
-    display: flex;
-    flex-direction: row;
+@media screen and (max-width: 600px) {
+  .abrir-menu,
+  .cerrar-menu {
+    display: block;
+    border: 0;
+    background: none;
+    font-size: 20px;
+    color: rgb(0, 0, 255);
   }
-  nav {
-    padding: 10px 0px;
+
+  .nav{
+    opacity: 0;
+    visibility: hidden;
+
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 32);
+    padding: 20px;
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 32, 0.5);
+  } 
+
+  .nav.visible{
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .nav-list{
+    flex-direction: column;
   }
 }
