--- a/CSS/Comprar.css
+++ b/CSS/Comprar.css
@@ -3,9 +3,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Genos", sans-serif;
+  
 }
 body {
   background-color: rgb(255, 238, 238);
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
 }
 
 header {
@@ -16,6 +20,10 @@ header {
   background-image: linear-gradient(10deg, #000020, 85%, #0000ff);
 }
 
+header li a:hover {
+  color: rgb(255, 0, 0);
+}
+
 .img-logo {
  max-width: 150px;
 }
@@ -24,6 +32,7 @@ header {
   list-style: none;
   display: flex;
   gap: 20px;
+  font-size: 25px;
 }
 
 .nav-list li a {
@@ -44,21 +53,24 @@ header {
   margin: 10px;
   border-radius: 5px;
 }
+
 .btn-dest:hover {
   color: red;
 }
+
 footer {
   background-color: rgb(190, 190, 253);
   text-align: center;
   padding: 10px;
 }
+
 @media screen and (max-width: 600px) {
   .abrir-menu,
   .cerrar-menu {
     display: block;
     border: 0;
     background: none;
-    font-size: 20px;
+    font-size: 25px;
     color: rgb(0, 0, 255);
   }
 
@@ -69,14 +81,15 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: end;
-    gap: 20px;
+    gap: 30px;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     background-color: rgb(0, 0, 32);
-    padding: 20px;
+    padding: 30px;
     box-shadow: 0 0 0 100vmax rgba(0, 0, 32, 0.5);
+    transition: all 0.5s ease;
   } 
 
   .nav.visible{
