--- a/CSS/DESTSOP.css
+++ b/CSS/DESTSOP.css
@@ -6,14 +6,27 @@
 }
 body {
   background-color: rgb(255, 238, 238);
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
 }
-
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 20px;
+}
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
   background-image: linear-gradient(10deg, #000020, 85%, #0000ff);
+}
+header li a:hover {
+  color: rgb(255, 0, 0);
 }
 
 .img-logo {
@@ -24,6 +37,7 @@ header {
   list-style: none;
   display: flex;
   gap: 20px;
+  font-size: 25px;
 }
 
 .nav-list li a {
@@ -34,6 +48,21 @@ header {
 .abrir-menu,
 .cerrar-menu{
   display: none;
+}
+
+
+.art-intro{
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
+}
+.art-intro li {
+  list-style: none;
+  margin: 10px 0;
+}
+
+.la-solucion{
+  text-align: center;
 }
 
 .btn-comprar {
@@ -59,7 +88,7 @@ footer {
     display: block;
     border: 0;
     background: none;
-    font-size: 20px;
+    font-size: 25px;
     color: rgb(0, 0, 255);
   }
 
@@ -70,14 +99,15 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: end;
-    gap: 20px;
+    gap: 30px;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     background-color: rgb(0, 0, 32);
-    padding: 20px;
+    padding: 30px;
     box-shadow: 0 0 0 100vmax rgba(0, 0, 32, 0.5);
+    transition: all 0.5s ease;
   } 
 
   .nav.visible{
