--- a/CSS/Contactanos.css
+++ b/CSS/Contactanos.css
@@ -5,7 +5,7 @@
   font-family: "Genos", sans-serif;
 }
 body {
-  background-color: rgb(255, 238, 238);
+  background-color: rgb(255, 255, 255);
   display: grid;
   min-height: 100vh;
   grid-template-rows: auto 1fr auto;
@@ -21,6 +21,8 @@ header {
 
 header li a:hover {
   color: rgb(255, 0, 0);
+  transition: all 0.3s ease;
+
 }
 
 .img-logo {
@@ -60,17 +62,19 @@ header li a:hover {
   min-width: 300px;
 }
 
-.telefono-form input {
+.telefono-form input, .telefono-form textarea {
   font-size: 20px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid rgb(50, 130, 255);
 }
 
-.telefono-form input:focus{
+.telefono-form input:focus, .telefono-form textarea:focus {
   outline: none;
-  border: 2px solid rgb(50, 130, 255);
-  box-shadow: inset 0 0 3px rgb(50, 130, 255);
+  border: 1px solid rgb(50, 130, 255);
+  box-shadow: 0 0 10px rgb(50, 130, 255); 
+  transition: all 0.3s ease;
+  
 }
 
 .telefono-form button {
@@ -94,17 +98,18 @@ header li a:hover {
   min-width: 300px;
 }
 
-.correo-form input {
+.correo-form input, .correo-form textarea {
   font-size: 20px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid rgb(255, 100, 100);
 }
 
-.correo-form input:focus{
+.correo-form input:focus, .correo-form textarea:focus {
   outline: none;
-  border: 2px solid rgb(255, 100, 100);
-  box-shadow: inset 0 0 3px rgb(255, 100, 100);
+  border: 1px solid rgb(255, 100, 100);
+  box-shadow: 0 0 10px rgb(255, 100, 100);
+  transition: all 0.3s ease;
 }
 
 .correo-form button {
@@ -128,17 +133,18 @@ header li a:hover {
   min-width: 300px;
 }
 
-.whatsapp-form input {
+.whatsapp-form input, .whatsapp-form textarea {
   font-size: 20px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid rgb(37, 211, 102);
 }
 
-.whatsapp-form input:focus{
+.whatsapp-form input:focus, .whatsapp-form textarea:focus {
   outline: none;
-  border: 2px solid rgb(37, 211, 102);
-  box-shadow: inset 0 0 3px rgb(37, 211, 102);
+  border: 1px solid rgb(37, 211, 102);
+  box-shadow: 0 0 10px rgb(37, 211, 102);
+  transition: all 0.3s ease;
 }
 
 .whatsapp-form button {
